fix spacing

--- a/template.css
+++ b/template.css
@@ -1,9 +1,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
-}
-
-body{
+    margin-left: 0px;
     font-family: baskerville-urw, serif;
     font-weight: 400;
     font-style: normal;
@@ -11,36 +9,30 @@ body{
 
 .menu{
     padding-bottom: 5px;
-    width: 1800px;
-    margin-left: -50px;
-}
-
-ul{
-    margin-left: 30px;
-    margin-right: 30px;
-    vertical-align: center;
 }
 
 li{
+    vertical-align: center;
     display: inline;
 }
 
 #header{
     font-size: 35px;
-    padding-right: 675px;
+    padding-right: 655px;
+    padding-left: 20px;
     color: #977289;
 }
 
 .underline{
     text-decoration: underline;
-    color: #838DB1;
+    color: #60686e;
 }
 
 button{
     border: none;
     background-color: transparent;
     display: inline;
-    padding-right: 50px;
+    padding-right: 40px;
     color: #60686e;
     font-size: 20px;
 }
@@ -50,9 +42,8 @@ button{
     text-align: center;
     position: absolute;
     height: 75px;
-    width: 1500px;
-    margin-left: -40px;
-    margin-top: 10px;
+    width: 100%;
+    margin-top: 8px;
 }
 
 h2{
@@ -61,19 +52,20 @@ h2{
 }
 
 .content{
-    margin-top: 50px;
-    margin-left: 30px;
-    margin-right: 50px;
-    color:rgb(61, 61, 61);
+    margin-top: 0px;
     text-align: center;
 }
 
+#projectspacing{
+    margin-top: 130px;
+    margin-bottom: 30px;
+}
+
 #para{
-    margin-top: 50px;
+    margin-top: 130px;
 }
 
 img{
-    margin-top: 100px;
     width: 400px; 
 }
 
@@ -103,10 +95,11 @@ img{
     display: table;
   }
 
+    /*contact image*/
   .column2 img{
-      width: 1000px;
-      margin-top: 0px;
-      margin-left: 0px;
+      width: 875px;
+      margin-top: 183px;
+      margin-left: -500px;
   }
 
 #goback{
